# stock-analysis-ai

./: .gitignore  pyproject.toml
docs/open_issues/current/: stock_analysis_ai_open_issues_management_table.md  stock_analysis_ai_open_issues_management_table_r29_update_draft.md
docs/prompts/: stock_analysis_ai_codex_handoff_html_render_phase1.md
docs/specs/current/: canslim_authoring_and_implementation_guide.md  master_storage_completed_ddl_and_migration_acceptance_decision_memo.md  night_update_formalization_and_publish_orchestration_connection_decision_memo.md  stock_analysis_ai_authoring_and_implementation_guide.md  stock_analysis_ai_codex_handoff_html_generation_and_publish_orchestration_latest.md  stock_analysis_ai_master_storage_and_night_update_acceptance_memo_20260419_updated_full.md  stock_analysis_ai_project_purpose_and_operation_spec_v0_21.md  stock_analysis_ai_project_purpose_and_operation_spec_v0_22.md  stock_analysis_ai_project_purpose_and_operation_spec_v0_23.md
scripts/: bootstrap_windows_env.ps1  run_html_generation_tests.ps1
src/stock_analysis_ai/: __init__.py
src/stock_analysis_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stock_analysis_ai/html_generation/: __init__.py  anchor_helper.py  cli.py  contracts.py  exceptions.py  paths.py  payload_builder.py  publish_pipeline.py  screen_registry.py  state_labels.py  url_state.py
src/stock_analysis_ai/master_storage/: __init__.py  change_set.py  contracts.py  key_factory.py  migration.py  position_cycle.py  reconciliation.py  schema.py
tests/: conftest.py
(+25 files in other folders)
